# dbas

./: .bandit  .bumpversion.cfg  .coveragerc  .dockerignore  .env  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .jshintrc  .yarnrc  C:\nppdf32Log\debuglog.txt  CHANGELOG  CHANGELOG.md  CHANGES.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.docs  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  addEnglischDiscussion.py  alembic.ini  analyzeDiscussion.py  anonymizeDiscussion.py  build_assets.sh  dbas.sqlite  deploy_dbas.service  development.env  development.ini  devkey.pem  devpublic.pem  discussion-analyzer-printer.py  discussion-analyzer.py  discussion-anonymizer.py  docker-compose-export-db.yml  (+30 more)
admin/: __init__.py  admin.ini  export.ini  i18n.sh  lib.py  views.py
analyzer/: discussion-analyzer-printer.py  discussion-analyzer.py  discussion-anonymizer.py
api/: README.rst  __init__.py  api.ini  dbas_openapi_v3.yaml  exports.py  extractor.py  lib.py  login.py  models.py  origins.py  references.py  setup.py  swagger.yml  templates.py  test_lib.py  views.py
api_v2/: __init__.py  views.py
database/: Dockerfile  discussion.sql  setup.sh
db/: 001_init.sh
db-migrations/: README.md  env.py
dbas/: __init__.py  breadcrumb_helper.py  console_scripts.py  database_helper.py  dictionary_helper.py  dictionary_helper_discussion.py  dictionary_helper_items.py  email.py  event_handler.py  events.py  exceptions.py  fuzzy_string.py  helper.py  i18n.sh  input_validator.py  lib.py  logger.py  models.py  news_handler.py  notification_helper.py  (+21 more)
(+1017 files in other folders)
