[tool.poetry]
name = "dbas"
version = "1.27.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.5"
alembic = "1.*"
appdirs = "^1.4"
arrow = "=0.13.1"
bcrypt = "^3.1"
colander = "^1.7"
cornice = "^3.5"
coverage = "^4.5"
cryptography = "^2.6"
graphql-core = "^2.2"
graphene-sqlalchemy = "=2.2.0"
hypothesis = "^4.14"
mccabe = "*"
mock = "^2"
nose-timer = "*"
oauth2 = "^1.9"
Paste = "^3.*"
py3dns = "^3.2"
PyJWT = "^1.7"
pytest = "^4.3"
python-ldap = "^3.2"
python-Levenshtein = "*"
python-twitter = "=^3.5"
slugify = "*"
sphinx-rtd-theme = "*"
SQLAlchemy-Utils = "*"
uWSGI = "^2"
WebOb-GraphQL = "^1"
wheel = "*"
required = "*"
pyramid-beaker = "*"
"zope.sqlalchemy" = "=1.1"
validate-email = "^1.3"
waitress = "^1.4"
WebTest = "^2"
SQLAlchemy = "^1.3"
transaction = "^2.4"
splinter = "*"
requests = "^2.21"
python-slugify = "^3"
pyshorteners = "*"
pyramid-tm = "^2.2"
pyramid-redis-sessions = "^1"
pyramid-mailer = "*"
pyramid-chameleon = "*"
pyramid = "^1.10"
lingua = "^4.13"
docutils = "*"
psycopg2 = "=2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
